# AutoCanny

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
doc/: main.dox
src/: CMakeLists.txt
src/AutoCanny/: CMakeLists.txt
src/AutoCanny/include/AutoCanny/: AutoCanny.h
src/AutoCanny/src/: AutoCanny.cpp
test/: AutoCannyTest.cpp  AutoDirCannyTest.cpp  CMakeLists.txt
